--- a/client/services.html
+++ b/client/services.html
@@ -31,92 +31,7 @@
 	<body>
 
 	<!-- Start Header/Navigation -->
-	<nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" aria-label="Furni navigation bar">
-		<div class="container">
-			<a class="navbar-brand" href="index.html">Shejama Group<span>.</span></a>
-
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarsFurni">
-				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-
-					<!-- Shop Dropdown with Submenus -->
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="shop.html" id="shopDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Shop
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="shopDropdown">
-							<!-- Home Furniture Dropdown -->
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">Home Furniture</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Bedroom</a></li>
-									<li><a class="dropdown-item" href="#">Dining</a></li>
-									<li><a class="dropdown-item" href="#">Kitchen</a></li>
-								</ul>
-							</li>
-
-							<!-- Kids Furniture Dropdown -->
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">Kids Furniture</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Cots</a></li>
-									<li><a class="dropdown-item" href="#">Tables</a></li>
-									<li><a class="dropdown-item" href="#">Mirrors</a></li>
-								</ul>
-							</li>
-
-							<!-- Office Furniture Dropdown -->
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">Office Furniture</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Workstations</a></li>
-									<li><a class="dropdown-item" href="#">Meeting Rooms</a></li>
-									<li><a class="dropdown-item" href="#">Reception</a></li>
-								</ul>
-							</li>
-
-							<!-- Hotel Furniture Dropdown -->
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">Hotel Furniture</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Lobby</a></li>
-									<li><a class="dropdown-item" href="#">Guest Rooms</a></li>
-									<li><a class="dropdown-item" href="#">Restaurant</a></li>
-								</ul>
-							</li>
-
-							<!-- Restaurant Furniture Dropdown -->
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">Restaurant Furniture</a>
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="#">Bar stools</a></li>
-									<li><a class="dropdown-item" href="#">Dining tables</a></li>
-									<li><a class="dropdown-item" href="#">Kitchen</a></li>
-								</ul>
-							</li>
-
-
-						</ul>
-					</li>
-
-					<li><a class="nav-link" href="about.html">About us</a></li>
-					<li><a class="nav-link" href="services.html">Services</a></li>
-					<li><a class="nav-link" href="contact.html">Contact us</a></li>
-				</ul>
-
-				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
-					<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<div id="navbar"></div>
 	<!-- End Header/Navigation -->
 		<!-- Start Hero Section -->
 			<div class="hero">
@@ -487,6 +402,7 @@
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
 		<script src="js/custom.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 
 </html>
