update with homefurniture sub catogory

--- a/frontend/client/navbar.html
+++ b/frontend/client/navbar.html
@@ -23,10 +23,10 @@
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" href="homeFurniture.html">Home Furniture</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Bedroom Room</a></li>
-                                <li><a class="dropdown-item" href="#">Livinig Room</a></li>
-                                <li><a class="dropdown-item" href="#">Dining Room</a></li>
-                                <li><a class="dropdown-item" href="#">Kitchen</a></li>
+                                <li><a class="dropdown-item" href="bedroomfurniture.html">Bedroom Room</a></li>
+                                <li><a class="dropdown-item" href="livingroomfurniture.html">Livinig Room</a></li>
+                                <li><a class="dropdown-item" href="dinnigroomfurniture.html">Dining Room</a></li>
+                                <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
                             </ul>
                         </li>
 
