--- a/frontend/client/bedroomfurniture.html
+++ b/frontend/client/bedroomfurniture.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,8 +20,8 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Shejama Group</title>
 </head>
-
 <body>
+
 <!-- Start Header/Navigation -->
 <div id="navbar"></div>
 <!-- End Header/Navigation -->
@@ -32,7 +32,7 @@
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-4">
                 <div class="intro-excerpt">
-                    <h1 class="display-4 font-weight-bold">Home Furniture</h1>
+                    <h1 class="display-4 font-weight-bold">Bed Room</h1>
                 </div>
             </div>
         </div>
@@ -50,8 +50,8 @@
                 <div class="col-md-3 mb-4">
                     <a href="livingroomfurniture.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/livinigroom.jpg" class="img-fluid" alt="Product 1">
-                            <h5 class="product-title text-center mt-3">Living Room</h5>
+                            <img src="images/Mattress.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Mattress</h5>
                         </div>
                     </a>
                 </div>
@@ -60,8 +60,8 @@
                 <div class="col-md-3 mb-4">
                     <a href="bedroomfurniture.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/bedroom.jpg" class="img-fluid" alt="Product 2">
-                            <h5 class="product-title text-center mt-3">Bed Room</h5>
+                            <img src="images/wardores.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Wardrobes</h5>
                         </div>
                     </a>
                 </div>
@@ -70,8 +70,8 @@
                 <div class="col-md-3 mb-4">
                     <a href="dinnigroomfurniture.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/dinning%20room.jpg" class="img-fluid" alt="Product 3">
-                            <h5 class="product-title text-center mt-3">Dinning Room</h5>
+                            <img src="images/beds.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Beds</h5>
                         </div>
                     </a>
                 </div>
@@ -80,18 +80,51 @@
                 <div class="col-md-3 mb-4">
                     <a href="kitchen.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/kichten.jpg" class="img-fluid" alt="Product 4">
-                            <h5 class="product-title text-center mt-3">kitchen </h5>
+                            <img src="images/sidecupboard.jpg" class="img-fluid" alt="Product 4">
+                            <h5 class="product-title text-center mt-3">Bed side Cupboards</h5>
                         </div>
                     </a>
                 </div>
             </div>
             <!-- End Product List Row -->
         </div>
+        <div class="row">
+            <!-- Start Product List Row -->
+            <div class="row">
+                <!-- Product 1 -->
+                <div class="col-md-3 mb-4">
+                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/dressingtables.jpeg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Dressing Tables</h5>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Product 2 -->
+                <div class="col-md-3 mb-4">
+                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/towelracks.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Towel Racks</h5>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Product 3 -->
+                <div class="col-md-3 mb-4">
+                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/mirrors.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Mirrors</h5>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- End product-category Section -->
-
 
 <!-- Start Footer Section -->
 <div id="footer"></div>
