--- a/frontend/client/kitchen.html
+++ b/frontend/client/kitchen.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,8 +20,8 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Shejama Group</title>
 </head>
-
 <body>
+
 <!-- Start Header/Navigation -->
 <div id="navbar"></div>
 <!-- End Header/Navigation -->
@@ -32,13 +32,14 @@
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-4">
                 <div class="intro-excerpt">
-                    <h1 class="display-4 font-weight-bold">Home Furniture</h1>
+                    <h1 class="display-4 font-weight-bold">Kitchen</h1>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- End Hero Section -->
+
 
 <!-- Start product-category Section -->
 <div class="product-section">
@@ -48,10 +49,10 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="ure.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/livinigroom.jpg" class="img-fluid" alt="Product 1">
-                            <h5 class="product-title text-center mt-3">Living Room</h5>
+                            <img src="images/pantrytblset.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Pantry Table Set</h5>
                         </div>
                     </a>
                 </div>
@@ -60,8 +61,8 @@
                 <div class="col-md-3 mb-4">
                     <a href="bedroomfurniture.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/bedroom.jpg" class="img-fluid" alt="Product 2">
-                            <h5 class="product-title text-center mt-3">Bed Room</h5>
+                            <img src="images/pantrycupboard.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Pantry Cupboards</h5>
                         </div>
                     </a>
                 </div>
@@ -70,28 +71,18 @@
                 <div class="col-md-3 mb-4">
                     <a href="dinnigroomfurniture.html" class="text-decoration-none">
                         <div class="product-item">
-                            <img src="images/dinning%20room.jpg" class="img-fluid" alt="Product 3">
-                            <h5 class="product-title text-center mt-3">Dinning Room</h5>
+                            <img src="images/storagecupboard.png" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Storage Cupboards</h5>
                         </div>
                     </a>
                 </div>
 
-                <!-- Product 4 -->
-                <div class="col-md-3 mb-4">
-                    <a href="kitchen.html" class="text-decoration-none">
-                        <div class="product-item">
-                            <img src="images/kichten.jpg" class="img-fluid" alt="Product 4">
-                            <h5 class="product-title text-center mt-3">kitchen </h5>
-                        </div>
-                    </a>
-                </div>
             </div>
             <!-- End Product List Row -->
         </div>
     </div>
 </div>
 <!-- End product-category Section -->
-
 
 <!-- Start Footer Section -->
 <div id="footer"></div>
