--- a/frontend/client/livingroomfurniture.html
+++ b/frontend/client/livingroomfurniture.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="woodensofa.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/woodensofa.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Wooden Sofa</h5>
@@ -58,7 +58,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="fullcusion.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/fullcushionsofa.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Full Cushion Sofa</h5>
@@ -68,7 +68,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="easychairs.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/easychairs.jpg" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Easy Chairs</h5>
@@ -78,7 +78,7 @@
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <a href="kitchen.html" class="text-decoration-none">
+                    <a href="verandachairs.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/Varandahchair.jpg" class="img-fluid" alt="Product 4">
                             <h5 class="product-title text-center mt-3">Veranda Chairs</h5>
@@ -93,7 +93,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="displaycupboard.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/displaycupborard.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Display Cupboards</h5>
@@ -103,7 +103,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="chestofdrawers.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/chestodrawers.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Chest of Drawers</h5>
@@ -113,7 +113,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="ornamentracks.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/ornamentracks.jpg" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Ornament Racks</h5>
@@ -123,7 +123,7 @@
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <a href="kitchen.html" class="text-decoration-none">
+                    <a href="coffetables.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/coffee-tables.jpg" class="img-fluid" alt="Product 4">
                             <h5 class="product-title text-center mt-3">Coffe Tables</h5>
@@ -138,7 +138,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="kanappu.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/kanappu.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Kanappu</h5>
@@ -148,7 +148,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="pettagam.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/pettagam.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Pettagam</h5>
@@ -158,7 +158,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="mirrors.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/mirrors.jpg" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Mirrors</h5>
