--- a/frontend/client/bedroomfurniture.html
+++ b/frontend/client/bedroomfurniture.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="mettress.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/Mattress.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Mattress</h5>
@@ -58,7 +58,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="wardrobe.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/wardores.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Wardrobes</h5>
@@ -68,7 +68,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="beds.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/beds.jpg" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Beds</h5>
@@ -78,7 +78,7 @@
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <a href="kitchen.html" class="text-decoration-none">
+                    <a href="bedsidecupboard.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/sidecupboard.jpg" class="img-fluid" alt="Product 4">
                             <h5 class="product-title text-center mt-3">Bed side Cupboards</h5>
@@ -93,7 +93,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="dressingtable.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/dressingtables.jpeg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Dressing Tables</h5>
@@ -103,7 +103,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="towelracks.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/towelracks.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Towel Racks</h5>
@@ -113,7 +113,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="mirrors.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/mirrors.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Mirrors</h5>
