--- a/frontend/client/dinnigroomfurniture.html
+++ b/frontend/client/dinnigroomfurniture.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="consoletable.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/consoletable.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Console Table</h5>
@@ -58,7 +58,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="dinningtableset.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/dinningtableset.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Dinning Table Set</h5>
@@ -68,7 +68,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="dinningtable.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/dinningtable.jpg" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Dinning Table</h5>
@@ -78,7 +78,7 @@
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <a href="kitchen.html" class="text-decoration-none">
+                    <a href="dinningchair.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/dinningchair.jpg" class="img-fluid" alt="Product 4">
                             <h5 class="product-title text-center mt-3">Dinning Chair</h5>
@@ -93,7 +93,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="livingroomfurniture.html" class="text-decoration-none">
+                    <a href="alcholbottel.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/alcholbottle.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Alchole Bottle Furniture</h5>
@@ -103,7 +103,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="mirrors.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/mirrors.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Mirrors</h5>
