finish kitchen room pages

--- a/frontend/client/kitchen.html
+++ b/frontend/client/kitchen.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <a href="ure.html" class="text-decoration-none">
+                    <a href="pantrytableset.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/pantrytblset.jpg" class="img-fluid" alt="Product 1">
                             <h5 class="product-title text-center mt-3">Pantry Table Set</h5>
@@ -59,7 +59,7 @@
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <a href="bedroomfurniture.html" class="text-decoration-none">
+                    <a href="pantrycupboard.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/pantrycupboard.jpg" class="img-fluid" alt="Product 2">
                             <h5 class="product-title text-center mt-3">Pantry Cupboards</h5>
@@ -69,7 +69,7 @@
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <a href="dinnigroomfurniture.html" class="text-decoration-none">
+                    <a href="storagecupboard.html" class="text-decoration-none">
                         <div class="product-item">
                             <img src="images/storagecupboard.png" class="img-fluid" alt="Product 3">
                             <h5 class="product-title text-center mt-3">Storage Cupboards</h5>
