--- a/frontend/client/fullcusion.html
+++ b/frontend/client/fullcusion.html
@@ -85,7 +85,7 @@
                         <a class="product-item" href="product-details.html?id=${item.I_Id}">
                             <img src="${item.img}" class="img-fluid product-thumbnail" alt="${item.I_name}">
                             <h3 class="product-title">${item.I_name}</h3>
-                            <strong class="product-price">$${item.price.toFixed(2)}</strong>
+                            <strong class="product-price">Rs.${item.price.toFixed(2)}</strong>
 
                             <span class="icon-cross" onclick="addToCart('${item.I_Id}', '${item.I_name}', ${item.price}, '${item.img}')">
                                 <img src="images/cross.svg" class="img-fluid">
