finish office furniture section

--- a/frontend/client/officeFurniture.html
+++ b/frontend/client/officeFurniture.html
@@ -53,59 +53,73 @@
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/off-writing-tbl.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">Writing Tables</h5>
-                    </div>
+                    <a href="writingtables.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/off-writing-tbl.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">Writing Tables</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/ofc-computer-tbl.jpg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Computer Tables</h5>
-                    </div>
+                    <a href="writingtables.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/ofc-computer-tbl.jpg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Computer Tables</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/ofc-book-racks.jpg" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Book Racks</h5>
-                    </div>
+                    <a href="bookracks.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/ofc-book-racks.jpg" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Book Racks</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 4 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/ofc-book-cupborad.jpg" class="img-fluid" alt="Product 4">
-                        <h5 class="product-title text-center mt-3">Book Cupboards </h5>
-                    </div>
+                    <a href="bookcupboard.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/ofc-book-cupborad.jpg" class="img-fluid" alt="Product 4">
+                            <h5 class="product-title text-center mt-3">Book Cupboards </h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <!-- Product 1 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/confrnce-tbl.jpg" class="img-fluid" alt="Product 1">
-                        <h5 class="product-title text-center mt-3">conference table</h5>
-                    </div>
+                    <a href="conforencetable.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/confrnce-tbl.jpg" class="img-fluid" alt="Product 1">
+                            <h5 class="product-title text-center mt-3">conference table</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/ofc-chairs.jpeg" class="img-fluid" alt="Product 2">
-                        <h5 class="product-title text-center mt-3">Office chairs</h5>
-                    </div>
+                    <a href="chairs.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/ofc-chairs.jpeg" class="img-fluid" alt="Product 2">
+                            <h5 class="product-title text-center mt-3">Office chairs</h5>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Product 3 -->
                 <div class="col-md-3 mb-4">
-                    <div class="product-item">
-                        <img src="images/sofa.png" class="img-fluid" alt="Product 3">
-                        <h5 class="product-title text-center mt-3">Sofa</h5>
-                    </div>
+                    <a href="fullcusion.html" class="text-decoration-none">
+                        <div class="product-item">
+                            <img src="images/sofa.png" class="img-fluid" alt="Product 3">
+                            <h5 class="product-title text-center mt-3">Sofa</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <!-- End Product List Row -->
